# unity-msgpack-schema-exporter

./: .gitignore  LICENSE  README.md  UnityMsgpackSchemaExporter.sln
.github/workflows/: release.yml
UnityMsgpackSchemaExporter/: AssemblyReaderAbstraction.cs  AvroExporter.cs  Models.cs  MsgPackCodec.cs  README.md  SchemaExtractor.cs  SrmAssemblyReader.cs  UnityMsgpackSchemaExporter.csproj
UnityMsgpackSchemaExporter.Cli/: Program.cs  UnityMsgpackSchemaExporter.Cli.csproj
UnityMsgpackSchemaExporter.Native/: NativeExports.cs  README.md  UnityMsgpackSchemaExporter.Native.csproj
UnityMsgpackSchemaExporter.TestSchemas/: TestSchemas.cs  UnityMsgpackSchemaExporter.TestSchemas.csproj
UnityMsgpackSchemaExporter.Tests/: AvroExporterEdgeCaseTests.cs  AvroExporterTests.cs  CodecEdgeCaseTests.cs  CodecRoundtripTests.cs  CoverageBranchTests.cs  PrimitiveAndPropertyTests.cs  SchemaExtractorEdgeCaseTests.cs  SchemaExtractorTests.cs  UnityMsgpackSchemaExporter.Tests.csproj
examples/: README.md
examples/csharp/: CsharpExample.csproj  Program.cs
examples/go/: go.mod  main.go
examples/go/avroschema/: schema.go  schema_test.go
examples/python/: README.md  cli.py  pyproject.toml
examples/python/src/unity_msgpack_avro/: __init__.py
examples/python/tests/: test_avroschema.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
pybind/: README.md  pyproject.toml
pybind/example/: lib_example.py
pybind/src/unity_msgpack_schema/: __init__.py  _lib.py
pybind/tests/: conftest.py  test_avro_exporter.py  test_codec_edge_cases.py  test_codec_roundtrip.py  test_schema.py  test_schema_extractor.py
