[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unity-msgpack-schema"
version = "0.1.0"
description = "Python bindings for Unity MsgPack Schema Tools (NativeAOT FFI)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "middlered" },
]
keywords = ["msgpack", "unity", "schema", "avro", "ffi", "dotnet", "c#"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.6",
    "hatchling>=1.27.0",
    "msgpack>=1.0",
]

[project.urls]
Homepage = "https://github.com/middlered/unity-msgpack-schema-exporter"
Repository = "https://github.com/middlered/unity-msgpack-schema-exporter"

[tool.hatch.build.targets.wheel]
packages = ["src/unity_msgpack_schema"]
artifacts = [
    "*.so",
    "*.dylib",
    "lib/*.so",
    "lib/*.dylib",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = "pytest --cov=unity_msgpack_schema {args:tests}"
